--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -2,8 +2,14 @@
   @extend %list;
   display: flex;
 
+  @media screen and (max-width: 479px) {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
   @media screen and (min-width: 480px) {
     flex-wrap: wrap;
+    flex-direction: unset;
     margin: -15px;
   }
 
@@ -13,6 +19,7 @@
 }
 
 .clients-list .clients-item {
+  flex-direction: column;
   height: 90px;
   fill: $primary-icons-color;
   border: 1px solid $border-clients-color;
