--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -70,7 +70,6 @@
 }
 
 .join-email {
-  width: 358px;
   padding: 15px;
   background-color: $footer-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -82,17 +81,17 @@
   font-weight: normal;
   line-height: 1.25;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    display: block;
+  display: inline-block;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 480px) {
     width: 450px;
   }
 
-  @media screen and (max-width: 1199px) {
-    margin-bottom: 20px;
-  }
-
   @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
     margin-right: 12px;
+    width: 358px;
   }
 
   &:focus {
@@ -101,10 +100,8 @@
 }
 
 .tablet-address-socials {
-  @media screen and (min-width: 480px) {
-    display: block;
-    margin-bottom: 60px;
-  }
+  display: block;
+  margin-bottom: 60px;
 
   @media screen and (min-width: 768px) {
     display: flex;
