--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -165,6 +165,7 @@
 
 .menu-container {
   @media screen and (max-width: 767px) {
+    min-height: 393px;
     display: none;
     position: absolute;
     top: 100%;
@@ -181,6 +182,25 @@
       display: block;
     }
   }
+
+  // @media screen and (max-width: 767px) {
+  //   min-height: 393px;
+  //   display: none;
+  //   position: absolute;
+  //   top: 100%;
+  //   left: 0;
+  //   width: 100%;
+  //   min-height: 393px;
+  //   background-color: $primary-bgc-color;
+  //   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08),
+  //     0px 4px 8px rgba(0, 0, 0, 0.04);
+
+  //   border-top: 1px solid $header-border-color;
+
+  //   &.is-open {
+  //     display: block;
+  //   }
+  // }
 
   @media screen and (min-width: 768px) {
     display: flex;
