--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -4,84 +4,24 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  max-width: 1600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
-  background-color: $bgc-projects-color;
-  background-repeat: no-repeat;
-  background-position: center;
 
-  width: 480px;
-  height: 400px;
-
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-    ),
-    url("../images/mobile.jpg");
+  // background-image: linear-gradient(
+  //     to right,
+  //     rgba(47, 48, 58, 0.8),
+  //     rgba(47, 48, 58, 0.8)
+  //   ),
+  //   url("../images/mobile.jpg");
+  // background-repeat: no-repeat;
+  // background-position: center;
   // background-size: cover;
-  background-size: 480px 400px;
+  background-color: $bgc-projects-color;
 
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .hero {
-      background-image: linear-gradient(
-          to right,
-          rgba(47, 48, 58, 0.8),
-          rgba(47, 48, 58, 0.8)
-        ),
-        url("../images/mobile@2x.jpg");
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    height: 400px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url("../images/tablet.jpg");
-    background-size: 768px 400px;
-
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      .hero {
-        background-image: linear-gradient(
-            to right,
-            rgba(47, 48, 58, 0.8),
-            rgba(47, 48, 58, 0.8)
-          ),
-          url("../images/tablet@2x.jpg");
-      }
-    }
-  }
   @media screen and (min-width: 1200px) {
-    width: 1600px;
     height: 600px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url("../images/desktope.jpg");
-    background-size: 1600px 600px;
-
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      .hero {
-        background-image: linear-gradient(
-            to right,
-            rgba(47, 48, 58, 0.8),
-            rgba(47, 48, 58, 0.8)
-          ),
-          url("../images/desktope@2x.jpg");
-      }
-    }
   }
 }
 
