--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -111,7 +111,7 @@
   @extend %list;
   display: flex;
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     margin-bottom: 40px;
     flex-wrap: wrap;
   }
@@ -142,7 +142,7 @@
   letter-spacing: 0.03em;
 
   &:nth-child(-n + 5) {
-    @media screen and (min-width: 480px) and (max-width: 767px) {
+    @media screen and (max-width: 767px) {
       margin-bottom: 15px;
     }
   }
