--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -4,7 +4,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) {
     width: 480px;
   }
 
