--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ img {
   margin-right: auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
@@ -458,6 +458,7 @@ img {
 
 @media screen and (max-width: 767px) {
   .menu-container {
+    min-height: 393px;
     display: none;
     position: absolute;
     top: 100%;
@@ -587,7 +588,6 @@ img {
 }
 
 .join-email {
-  width: 358px;
   padding: 15px;
   background-color: #2f303a;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -599,24 +599,21 @@ img {
   font-style: normal;
   font-weight: normal;
   line-height: 1.25;
+  display: inline-block;
+  margin-bottom: 20px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .join-email {
-    display: block;
     width: 450px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .join-email {
-    margin-bottom: 20px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .join-email {
+    margin-bottom: 0;
     margin-right: 12px;
+    width: 358px;
   }
 }
 
@@ -624,11 +621,9 @@ img {
   color: #ffffff;
 }
 
-@media screen and (min-width: 480px) {
-  .tablet-address-socials {
-    display: block;
-    margin-bottom: 60px;
-  }
+.tablet-address-socials {
+  display: block;
+  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -679,11 +674,9 @@ img {
   display: inline-flex;
 }
 
-@media screen and (min-width: 480px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -730,56 +723,16 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+  max-width: 1600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
   background-color: rgba(47, 48, 58, 0.8);
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 480px;
-  height: 400px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/mobile.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/mobile.jpg");
-  background-size: 480px 400px;
-}
-
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-  .hero .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/mobile@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/mobile@2x.jpg");
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    width: 768px;
-    height: 400px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/tablet.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/tablet.jpg");
-    background-size: 768px 400px;
-  }
-}
-
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .hero .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/tablet@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/tablet@2x.jpg");
-  }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    width: 1600px;
     height: 600px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/desktope.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/desktope.jpg");
-    background-size: 1600px 600px;
-  }
-}
-
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .hero .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/desktope@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/desktope@2x.jpg");
   }
 }
 
@@ -1065,10 +1018,8 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .team-list > .item:not(:last-child) {
-    margin-bottom: 30px;
-  }
+.team-list > .item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1111,10 +1062,25 @@ img {
   display: flex;
 }
 
+@media screen and (max-width: 479px) {
+  .clients-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .clients-list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-orient: unset;
+    -webkit-box-direction: unset;
+        -ms-flex-direction: unset;
+            flex-direction: unset;
     margin: -15px;
   }
 }
@@ -1127,6 +1093,10 @@ img {
 }
 
 .clients-list .clients-item {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 90px;
   fill: #afb1b8;
   border: 1px solid #afb1b8;
@@ -1307,7 +1277,7 @@ img {
   display: flex;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .portfolio .radio-button {
     margin-bottom: 40px;
     -ms-flex-wrap: wrap;
@@ -1346,7 +1316,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .radio-button .radio:nth-child(-n + 5) {
     margin-bottom: 15px;
   }
