--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,12 @@ img {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 479px) {
+  .join-email {
+    width: 100%;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .join-email {
     width: 450px;
@@ -729,88 +735,7 @@ img {
 }
 
 .hero {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: rgba(47, 48, 58, 0.8);
-  background-repeat: no-repeat;
-  width: 480px;
-  height: 400px;
-  background-size: 480px 400px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/mobile.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/mobile.jpg");
-}
-
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-  .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/mobile@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/mobile@2x.jpg");
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    width: 768px;
-    height: 400px;
-    background-size: 768px 400px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/tablet.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/tablet.jpg");
-  }
-}
-
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/tablet@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/tablet@2x.jpg");
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    width: 1600px;
-    height: 600px;
-    background-size: 1600px 600px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/desktope.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/desktope.jpg");
-  }
-}
-
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/desktope@2x.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/desktope@2x.jpg");
-  }
-}
-
-.hero-title {
-  margin-top: 0;
-  margin-bottom: 38px;
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 1.62;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 1200px) {
-  .hero-title {
-    font-size: 44px;
-    line-height: 1.36;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1121,38 +1046,24 @@ img {
   display: flex;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 1199px) {
   .clients-list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
   }
 }
 
-@media screen and (min-width: 480px) {
-  .clients-list {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-orient: unset;
-    -webkit-box-direction: unset;
-        -ms-flex-direction: unset;
-            flex-direction: unset;
-    margin: -15px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .clients-list {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-  }
-}
-
-.clients-list .clients-item {
+.clients-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 90px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   fill: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1160,27 +1071,40 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 480px) {
-  .clients-list .clients-item {
-    width: calc((100% - 4 * 15px) / 2);
-    margin: 15px;
+@media screen and (max-width: 767px) {
+  .clients-item {
+    width: calc((100% - 30px) / 2);
+  }
+  .clients-item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+  .clients-item:nth-child(-n + 4) {
+    margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .clients-list .clients-item {
-    width: calc((100% - 6 * 15px) / 3);
-    margin: 15px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients-item {
+    width: calc((100% - 4 * 15px) / 3);
+  }
+  .clients-item:nth-child(3n + 1), .clients-item:nth-child(3n + 2) {
+    margin-right: 30px;
+  }
+  .clients-item:nth-child(-n + 3) {
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .clients-list .clients-item:not(:last-child) {
+  .clients-item {
+    width: calc((100% - 5 * 30px) / 6);
+  }
+  .clients-item:not(:last-child) {
     margin-right: 30px;
   }
 }
 
-.clients-list .clients-item:hover, .clients-list .clients-item:focus {
+.clients-item:hover, .clients-item:focus {
   border: 1px solid #2196f3;
   fill: #2196f3;
 }
