--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -2,40 +2,45 @@
   @extend %list;
   display: flex;
 
-  @media screen and (max-width: 479px) {
+  @media screen and (max-width: 1199px) {
     flex-wrap: wrap;
-    flex-direction: column;
-  }
-
-  @media screen and (min-width: 480px) {
-    flex-wrap: wrap;
-    flex-direction: unset;
-    margin: -15px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    flex-wrap: nowrap;
+    // margin: -15px;
   }
 }
 
-.clients-list .clients-item {
+.clients-item {
+  display: flex;
   height: 90px;
+  justify-content: center;
+  align-items: center;
   fill: $primary-icons-color;
   border: 1px solid $border-clients-color;
   border-radius: 4px;
 
-  @media screen and (min-width: 480px) {
-    width: calc((100% - 4 * 15px) / 2);
-    margin: 15px;
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 30px) / 2);
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 4) {
+      margin-bottom: 30px;
+    }
   }
 
-  @media screen and (min-width: 768px) {
-    width: calc((100% - 6 * 15px) / 3);
-    margin: 15px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 4 * 15px) / 3);
+    &:nth-child(3n + 1),
+    &:nth-child(3n + 2) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 3) {
+      margin-bottom: 30px;
+    }
   }
 
-  &:not(:last-child) {
-    @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 5 * 30px) / 6);
+    &:not(:last-child) {
       margin-right: 30px;
     }
   }
