--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -16,107 +16,90 @@
 }
 
 .hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
   text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: $bgc-projects-color;
-  background-repeat: no-repeat;
+  //   margin-right: auto;
+  //   margin-left: auto;
+  //   background-color: $bgc-projects-color;
+  //   background-repeat: no-repeat;
 
-  width: 480px;
-  height: 400px;
-  background-size: 480px 400px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-    ),
-    url("../images/mobile.jpg");
+  //   // width: 480px;
+  //   // height: 400px;
+  //   // background-size: 480px 400px;
+  //   background-image: linear-gradient(
+  //     to right,
+  //     rgba(47, 48, 58, 0.8),
+  //     rgba(47, 48, 58, 0.8)
+  //   );
+  // url("../images/mobile.jpg");
 }
 
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url("../images/mobile@2x.jpg");
-  }
-}
+// @media screen and (min-device-pixel-ratio: 2),
+//   screen and (min-resolution: 192dpi),
+//   screen and (min-resolution: 2dppx) {
+//   .hero {
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.8),
+//         rgba(47, 48, 58, 0.8)
+//       ),
+//       url("../images/mobile@2x.jpg");
+//   }
+// }
 
-@media screen and (min-width: 768px) {
-  .hero {
-    width: 768px;
-    height: 400px;
-    background-size: 768px 400px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url("../images/tablet.jpg");
-  }
+// @media screen and (min-width: 768px) {
+//   .hero {
+//     width: 768px;
+//     height: 400px;
+//     background-size: 768px 400px;
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.8),
+//         rgba(47, 48, 58, 0.8)
+//       ),
+//       url("../images/tablet.jpg");
+//   }
 
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .hero {
-      background-image: linear-gradient(
-          to right,
-          rgba(47, 48, 58, 0.8),
-          rgba(47, 48, 58, 0.8)
-        ),
-        url("../images/tablet@2x.jpg");
-    }
-  }
-}
+//   @media screen and (min-device-pixel-ratio: 2),
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     .hero {
+//       background-image: linear-gradient(
+//           to right,
+//           rgba(47, 48, 58, 0.8),
+//           rgba(47, 48, 58, 0.8)
+//         ),
+//         url("../images/tablet@2x.jpg");
+//     }
+//   }
+// }
 
-@media screen and (min-width: 768px) {
-  .hero {
-    width: 1600px;
-    height: 600px;
-    background-size: 1600px 600px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.8),
-        rgba(47, 48, 58, 0.8)
-      ),
-      url("../images/desktope.jpg");
-  }
+// @media screen and (min-width: 768px) {
+//   .hero {
+//     width: 1600px;
+//     height: 600px;
+//     background-size: 1600px 600px;
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.8),
+//         rgba(47, 48, 58, 0.8)
+//       ),
+//       url("../images/desktope.jpg");
+//   }
 
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .hero {
-      background-image: linear-gradient(
-          to right,
-          rgba(47, 48, 58, 0.8),
-          rgba(47, 48, 58, 0.8)
-        ),
-        url("../images/desktope@2x.jpg");
-    }
-  }
-}
-
-.hero-title {
-  margin-top: 0;
-  margin-bottom: 38px;
-
-  color: $primary-white-color;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 1.62;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-
-  @media screen and (min-width: 1200px) {
-    font-size: 44px;
-    line-height: 1.36;
-  }
-}
+//   @media screen and (min-device-pixel-ratio: 2),
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     .hero {
+//       background-image: linear-gradient(
+//           to right,
+//           rgba(47, 48, 58, 0.8),
+//           rgba(47, 48, 58, 0.8)
+//         ),
+//         url("../images/desktope@2x.jpg");
+//     }
+//   }
+// }
