--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -16,25 +16,26 @@
 }
 
 .hero {
-  //   display: flex;
-  //   flex-direction: column;
-  //   align-items: center;
-  //   justify-content: center;
+  // // display: flex;
+  // // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
   text-align: center;
-  //   margin-right: auto;
-  //   margin-left: auto;
-  //   background-color: $bgc-projects-color;
+  // margin-right: auto;
+  // margin-left: auto;
+  background-color: $bgc-projects-color;
   //   background-repeat: no-repeat;
+  //   background-position: center;
 
-  //   // width: 480px;
-  //   // height: 400px;
-  //   // background-size: 480px 400px;
+  //   width: 480px;
+  //   height: 400px;
+  //   background-size: contain;
   //   background-image: linear-gradient(
-  //     to right,
-  //     rgba(47, 48, 58, 0.8),
-  //     rgba(47, 48, 58, 0.8)
-  //   );
-  // url("../images/mobile.jpg");
+  //       to right,
+  //       rgba(47, 48, 58, 0.8),
+  //       rgba(47, 48, 58, 0.8)
+  //     ),
+  //     url("../images/mobile.jpg");
 }
 
 // @media screen and (min-device-pixel-ratio: 2),
@@ -54,7 +55,7 @@
 //   .hero {
 //     width: 768px;
 //     height: 400px;
-//     background-size: 768px 400px;
+//     background-size: cover;
 //     background-image: linear-gradient(
 //         to right,
 //         rgba(47, 48, 58, 0.8),
@@ -81,7 +82,7 @@
 //   .hero {
 //     width: 1600px;
 //     height: 600px;
-//     background-size: 1600px 600px;
+//     background-size: cover;
 //     background-image: linear-gradient(
 //         to right,
 //         rgba(47, 48, 58, 0.8),
